# BAFE-basic-algibra-fusion-engine-

./: .gitignore  Makefile  README.md  pyproject.toml
bafe/: __init__.py
bafe/egraph/: __init__.py  egraph.py
bafe/examples/: bench_layout.py  demo.py  demo_autotune.py  demo_pruning.py  demo_search.py
bafe/include/bafe/: bafe.h  codegen.h  cost.h  egraph.h  extract.h  fuse.h  ir.h  jit.h  ops.h  profiling.h  pruning.h  rewrite.h  search.h  types.h
bafe/ir/: __init__.py  graph.py  ops.py  types.py
bafe/python/bafe/: __init__.py  _binding.py
bafe/rewrite/: __init__.py  engine.py  rules.py
bafe/src/: bafe.c  codegen.c  cost.c  egraph.c  extract.c  fuse.c  ir.c  jit.c  ops.c  profiling.c  pruning.c  rewrite.c  search.c  types.c
bafe/tests/: conftest.py  test_autotune.py  test_calibration.py  test_dtypes.py  test_e2e.py  test_fuse.py  test_ir.py  test_layout.py  test_pruning.py  test_rewrite.py  test_search.py  test_types.py
scripts/: open_issues.py  test_smoke  test_smoke.c  test_smoke_asan
