[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bafe"
version = "0.1.0"
description = "Basic Algebra Fusion Engine - a tensor-IR superoptimizer with e-graphs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "BAFE contributors" }]
keywords = ["compiler", "tensor", "egraph", "superoptimizer", "mlir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.urls]
Repository = "https://github.com/AVmakeralt/BAFE-basic-algibra-fusion-engine-"
Issues = "https://github.com/AVmakeralt/BAFE-basic-algibra-fusion-engine-/issues"

[tool.setuptools.packages.find]
include = ["bafe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
