[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bafe"
version = "0.1.0"
description = "Basic Algebra Fusion Engine - C tensor-IR superoptimizer with Python binding"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "BAFE contributors" }]
keywords = ["compiler", "tensor", "egraph", "superoptimizer", "mlir", "c"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/AVmakeralt/BAFE-basic-algibra-fusion-engine-"
Issues = "https://github.com/AVmakeralt/BAFE-basic-algibra-fusion-engine-/issues"

[tool.setuptools]
packages = ["bafe"]
package-dir = { "" = "python" }

[tool.setuptools.package-data]
bafe = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
